--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h5>I am an even even even smaller Angus</h2>
           <h6 class="blue">I am the above average <span style="font-size:4px">Angus</span></h2>
           <p>I am a <i>cool</i> banana</p>
-          <a href="PracCode2.html" class="emoji">🍌</a>
+          <a href="page2.html" class="emoji">🍌</a>
         </td>
         <td>
           <img src="https://apod.nasa.gov/apod/image/2203/WhaleAurora_Strand_1500.jpg" alt="You're a blind loser" height="500" width="500">
