--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
   </head>
   <body style="background-color: #4e8dff">
     <h1>Page 2!</h1>
-    <a href="PracCode.html" class="emoji">🍆</a>
+    <a href="index.html" class="emoji">🍆</a>
     <p>There's not really anything here</p>
     <br>
     <p>I don't really know what to do</p>
@@ -31,7 +31,7 @@
       Cras id ipsum pharetra, hendrerit risus id, ullamcorper justo. Duis quis mauris nec sem accumsan rutrum. In eget tincidunt magna. Nullam tristique euismod quam, at euismod sapien. Aenean commodo ipsum non sollicitudin venenatis. Vestibulum et condimentum lectus. Cras ut ipsum tempus, tempor turpis quis, posuere dolor. Integer dictum elit eu felis convallis accumsan. Nullam condimentum molestie velit ac cursus. Donec sit amet convallis est. Proin et dapibus lectus, eu pharetra ligula. Aliquam erat volutpat. Pellentesque non tempus ligula. Pellentesque ullamcorper efficitur sem. Quisque congue nulla vitae efficitur auctor. Nunc lectus purus, pretium at eros quis, sagittis auctor velit.
     </p>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA05EOfXDIiayBGEXiUNSVhV-GY_t5BDssartNGg&callback=initMap&v=weekly"
       defer></script>
     <script>
       var x = document.getElementById("demo");
